--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Charles Dangerfield — Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
-  <p>Charles Dangerfield's Website</p>
+<body class="homebg">
+    <a href="#">Home</a> | <a href="html/resume.html">Resume</a> | <a href="html/aboutme.html">About Me</a>
+    <h1>Home Page</h1>
 </body>
 </html>
