--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body class="homebg">
     <a href="#">Home</a> | <a href="html/resume.html">Resume</a> | <a href="html/aboutme.html">About Me</a>
     <h1>Home Page</h1>
+    <h2>
+    Welcome to my website!
+    </h2>
 </body>
 </html>
