--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -18,7 +18,9 @@
         Hello! My name is Charles Dangerfield, and I am a Pre-Accounting major at Brigham Young University. I am passionate about numbers and enjoy working with data to uncover insights that can help businesses make informed decisions. In my free time, I enjoy running, playing piano, and spending time with friends and family.
     </p>
     <p>Something Interesting</p>
-    <p>This paragraph is for demonstration purposes.</p>
+    <p class="box1">This paragraph is for <span class="bold box1"> demonstration</span> purposes.</p>
+    <p class="box1 box2">This paragraph is for <span class="bold box1 box2"> demonstration</span> purposes.</p>
+    <p class="box1 box2 box3">This paragraph is for <span class="bold box1 box3"> demonstration</span> purposes.</p>
     <img src="../images/piano.jpg" alt="image of steinway piano">
 </body>
 </html>
