--- a/html/webapp.html
+++ b/html/webapp.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <a id="top" href="../index.html">Resume</a> | <a href="scratch_page.html">Scratch Page</a> | <a href="#">Web App</a>
+    <a id="top" href="../index.html">Resume</a> | <a href="scratch_page.html">Piano</a> | <a href="#">Web App</a>
     <h1>About Me</h1>
     <p class="justify">
         Hello! My name is Charles Dangerfield, and I am a Pre-Accounting major at Brigham Young University. I am passionate about numbers and enjoy working with data to uncover insights that can help businesses make informed decisions. In my free time, I enjoy running, playing piano, and spending time with friends and family.
