--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                             <h7><strong>Brigham Young University – Marriott School of Business</strong></h3>
                             <br><strong>Bachelor of Science:</strong> Accounting
                             <ul>
-                                <li>GPA 3.91 / 4.00</li>
-                                <li>ACT 32 / 36</li>
+                                <li>GPA -.-- / 4.00</li>
+                                <li>ACT -- / 36</li>
                                 <li>Academic Scholarship</li>
                                 <li>Coursework: IS 110 (Spreadsheet Skills), IS 201 (Information Systems), ACC 200 (Accounting Principles)</li>
                             </ul>
