--- a/html/webapp.html
+++ b/html/webapp.html
@@ -11,8 +11,8 @@
 <body>
     <div class="header">
         <a class="white_link" id="top" href="../index.html">Resume</a> | 
-        <a class="white_link" href="#">Piano</a> | 
-        <a class="white_link" href="webapp.html">Web App</a>
+        <a class="white_link" href="../html/scratch_page.html">Piano</a> | 
+        <a class="white_link" href="#">Web App</a>
         <h1>Piano Practice</h1>
     </div>
 
@@ -23,10 +23,10 @@
 <h2>Interactive Piano Practice</h2>
 
 <p>
-    Welcome to my piano practice webapp! I’ve always loved exploring music and finding new
+    Welcome to my piano practice webapp! I've always loved exploring music and finding new
     ways to connect with the piano, so I built this simple interactive tool to experiment with
-    sound directly in the browser. This one–octave keyboard lets you click each key to hear
-    its pitch, making it a fun way to review note names, intervals, or basic ear–training.
+    sound directly in the browser. This one-octave keyboard lets you click each key to hear
+    its pitch, making it a fun way to review note names, intervals, or basic ear-training.
 </p>
 
 <p>
