--- a/html/webapp.html
+++ b/html/webapp.html
@@ -1,3 +1,7 @@
+<!-- 
+Charles Dangerfield
+IS 201 
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +16,7 @@
     <div class="header">
         <a class="white_link" id="top" href="../index.html">Resume</a> | 
         <a class="white_link" href="../html/scratch_page.html">Piano</a> | 
-        <a class="white_link" href="#">Web App</a>
+        <a class="white_link" href="#">Piano App</a>
         <h1>Piano Practice</h1>
     </div>
 
