--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- 
+Charles Dangerfield
+IS 201 
+-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -27,8 +31,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="#">Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="html/scratch_page.html">Scratch Page</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="html/webapp.html">Webapp</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="html/scratch_page.html">Piano</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="html/webapp.html">Piano App</a></li>
                         <!-- <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Experience</a></li> -->
                     </ul>
                 </div>
